feat: fix all warning on build compiler (extension & android)